assets/sass/components/_form.scss
$input-max-width: 24em;

input,
textarea {
  font-family: inherit;
  font-size: inherit;
  color: var(--input-color);
}

textarea {
  resize: vertical;
}

.checkbox,
.text-area,
.text-field {
  margin-bottom: var(--input-gutter);

  input,
  textarea {
    max-width: $input-max-width;
  }
}

.checkbox {
  display: flex;
  text-align: center;

  i {
    cursor: pointer;
    font-size: 1.2rem;
    margin-right: 0.3rem;
    height: 1.2rem;
    width: 1.2rem;
  }

  label {
    padding-top: 0.05rem;
    cursor: pointer;
  }

  input {
    position: absolute;
    left: -1000px;
    opacity: 0;
  }

  &.is-disabled {
    i,
    label {
      color: var(--input-disabled-color);
      cursor: not-allowed;
    }
  }

  &.has-focus {
    i {
      outline: var(--input-focus-outline);
    }
  }
}

.text-area,
.text-field {
  label {
    font-size: inherit;
    padding: 0.1rem 0.4em;
    display: block;
  }

  p {
    font-size: 0.9rem;
    padding: 0 0.4em;
  }
}

.text-area,
.text-field {
  .input,
  input,
  textarea {
    background: var(--input-bg);
    color: var(--input-color);
    line-height: 2.2em;
    height: 2.2em;
    padding: 0.2em 0.5em;
    border: var(--input-border);
    border-radius: var(--input-border-radius);
    width: 100%;
    display: block;

    &::placeholder {
      color: var(--input-placeholder-color);
    }

    &[readonly] {
      background: var(--input-disabled-bg);
      color: var(--input-disabled-color);
      cursor: not-allowed;
    }

    &:focus {
      outline: var(--input-focus-outline);
      outline-width: 2px;
      outline-offset: -2px;
    }
  }

  .input {
    background: var(--input-disabled-bg);
    line-height: 1.8em;
    height: auto;
    max-height: none;
    cursor: not-allowed;

    &, a {
      color: var(--input-disabled-color);
    }
  }
}

.text-area textarea {
  line-height: 1.5em;
}

.text-area {
  textarea {
    min-height: 4rem;
  }
}

.form-actions {
  margin-top: var(--gutter);
  padding: var(--gutter-small) 0;

  > * {
    vertical-align: middle;
  }
}

.btn {
  background: var(--button-bg);
  color: var(--button-color);
  font-weight: 500;
  font-size: inherit;
  text-decoration: none;
  padding: 0.5em 1em;
  height: 2.2em;
  line-height: 1.2em;
  border: var(--button-border);
  border-radius: var(--input-border-radius);
  box-shadow: -2px 2px 3px rgba(0, 0, 0, 0.1);
  transition: filter 0.25s ease-in-out;
  display: inline-block;
  cursor: pointer;

  &:focus,
  &:hover {
    box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.1);
    filter: brightness(1.3);
  }

  &:focus {
    outline: var(--button-focus-outline);
    outline-offset: -2px;
  }

  &[disabled] {
    background: var(--button-disabled-bg);
    color: var(--button-disabled-color);
    border: var(--button-disabled-border);
    box-shadow: none;
    filter: none;
    cursor: not-allowed;
  }

  &.for-trash {
    background: var(--button-danger-bg);
  }

  &.is-hallow {
    background: transparent;
    color: var(--link-color);
    border: var(--input-border);
    box-shadow: none;
  }

  .fas {
    margin-right: 0.2em;
  }
}

.inputs-side-by-side {
  margin-bottom: var(--input-gutter);
  display: flex;
  align-items: flex-end;

  button {
    margin-left: var(--input-gutter);
  }

  .checkbox,
  .text-field {
    flex: 1 1 0;
    margin-bottom: 0;
  }
}

.select-field {
  line-height: 1.2em;
  height: calc(2.2em + var(--font-size) * 0.9 * 1.5);
  position: relative;
  overflow: visible;

  &.is-open {
    .select-field__options {
      box-shadow: inset -1px 1px 3px rgba(0, 0, 0, 0.1), 0px 3px 5px rgba(0, 0, 0, 0.3);
      height: auto;
      max-height: 10rem;
      display: block;
      overflow: auto;
      z-index: 1000;
    }
  }

  &:after {
    @extend .fas;
    content: fa-content($fa-var-caret-down);
    color: var(--input-color);
    position: absolute;
    bottom: 0.6rem;
    left: $input-max-width - 1.2em;
    pointer-events: none;

    @media (max-width: #{$input-max-width}) {
      left: auto;
      right: 0.7em;
    }
  }

  &.is-open:after {
    content: fa-content($fa-var-caret-up);
  }
}

.select-field__options {
  background: var(--autocomplete-bg);
  line-height: 2.2em;
  border: var(--input-border);
  border-radius: var(--input-border-radius);
  box-shadow: inset -1px 1px 3px rgba(0, 0, 0, 0.1), -1px 1px 2px rgba(0, 0, 0, 0.1);
  max-width: $input-max-width;
  height: 0;
  width: 100%;
  display: none;
  overflow: hidden;
  position: relative;

  a {
    color: var(--input-color);
    text-decoration: none;
    padding: 0em 0.5em;
    display: block;

    &.is-active {
      background: var(--autocomplete-focus-bg);
    }
  }
}

